style : fixed box not aligning to page

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
     background-color: var(--primary-color);
     padding: 1rem 0rem;
     margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
     color: var(--secondary-color);
 }
 
@@ -59,7 +59,6 @@ body {
     margin: auto;
     font-size: larger;
     background-color: white;
-    margin-bottom: 8rem;
     overflow: scroll;
 }
 
